* vm.c (vm_exec): returning from lambda runs ensure section.   [Bug #1729]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@24530 b2dd03c8-39d4-4d8f-98ff-823fe69b080e